# ksp-mods-mcp

./: .gitignore  CLAUDE.md  LICENSE  README.md  ROADMAP.md  TODO.md  explore_mod.py  pyproject.toml
harvester/: cfg_parser.py  ckan_cache.py  db.py  enrichment.py  harvest.py  parts.py
mcp_server/: server.py
